--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -11,25 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/flagImageView"
-            android:layout_width="45dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:scaleType="fitXY"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_launcher_background" />
-
         <TextView
             android:id="@+id/currencyNameTextView"
             style="@style/ItemCurrencyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            app:layout_constraintStart_toEndOf="@id/flagImageView"
-            app:layout_constraintTop_toTopOf="@id/flagImageView"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/currencyFullNameTextView"
             tools:text="ABC" />
 
         <TextView
@@ -37,7 +27,8 @@
             style="@style/ItemCurrencyFullName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/flagImageView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"
             app:layout_constraintStart_toStartOf="@id/currencyNameTextView"
             app:layout_constraintTop_toBottomOf="@id/currencyNameTextView"
             tools:text="Aaaa Bb Ccccccc" />
@@ -49,9 +40,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/flagImageView"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/currencyFavouriteImageView"
-            app:layout_constraintTop_toTopOf="@id/flagImageView"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="1,00" />
 
 
